# embroidery

./: .gitignore  pyproject.toml  read_threads.ipynb  requirements.txt
database/: Dockerfile  alembic.ini  init.sql
database/alembic/: env.py
database/alembic/models/: pattern.py
database/alembic/versions/: 2025_12_28_1652-e6a2cfed5356_add_pattern_table.py  2025_12_28_1711-6d4e406dc9da_add_thread_table.py  2025_12_28_1821-ac4ac24cc91b_add_pattern_req_inventory_tables.py
database/models/: __init__.py  inventory.py  pattern.py  pattern_requirements.py  thread.py
embroidery/: main.py  pattern_parser.py  pdf_reader.py  settings.py
embroidery/models/: pattern_models.py
tests/: test_pdf_reader.py
